--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
     "react-dom": "^18.2.0",
     "react-icons": "^4.11.0",
     "react-inputs-validation": "^4.9.9",
-    "react-router-dom": "^6.16.0"
+    "react-router-dom": "^6.16.0",
+    "react-select": "^5.7.7"
   },
   "devDependencies": {
     "@types/react": "^18.0.37",
